# Pillow-Metadata

./: .gitignore  README.md  pillow_metadata.py  pyproject.toml  requirements.txt
src/pillow_metadata/: helpers.py  metadata.py  pillow_metadata.py  schemas.py
