[project]
name = "Pillow-Metadata"
version = "0.0.3"
authors = [
  {name="Peter Jakubowski"},
]
description = "Python class that transforms XMP and Exif metadata into a standardized Python dataclass data structure from a Pillow (PIL) source image."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "lxml",
    "Pillow",
    "python-dateutil"
]

[project.urls]
HomePage = "https://github.com/peterjakubowski/Pillow-Metadata"
Issues = "https://github.com/peterjakubowski/Pillow-Metadata/issues"
